# ChangeLog for sys-apps/eject
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/eject/ChangeLog,v 1.33 2005/07/23 15:12:30 solar Exp $

  23 Jul 2005; <solar.@gentoo.org> +files/eject-2.0.13-i18n-uclibc.patch,
  eject-2.0.13-r2.ebuild:
  - handle uclibc minimal exceptions when i18n/nls/gettext is not active

  28 May 2005; Diego Pettenò <flameeyes@gentoo.org> eject-2.0.13.ebuild,
  eject-2.0.13-r1.ebuild, eject-2.0.13-r2.ebuild:
  Added virtual provision for virtual/eject.

*eject-2.0.13-r2 (21 May 2005)

  21 May 2005; Mike Frysinger <vapier@gentoo.org>
  +files/eject-2.0.13-close-check.patch, files/eject-2.0.13-finddev.patch,
  +files/eject-2.0.13-fstab-error.patch,
  +files/eject-2.0.13-no-umount.patch,
  +files/eject-2.0.13-prefix-defaultdevice-with-dev.patch,
  +files/eject-2.0.13-toggle.patch, +files/eject-2.0.13-xmalloc.patch,
  +files/eject-2.0.13-xregcomp.patch, +eject-2.0.13-r2.ebuild,
  +eject-2.0.13-pumount.patch:
  Add toggle support by Patrik Kullman #62612 and a bunch of patches from
  Debian #91977.

*eject-2.0.13-r1 (13 Feb 2005)

  13 Feb 2005; Mike Frysinger <vapier@gentoo.org>
  +files/eject-2.0.13-autoclose.patch, +files/eject-2.0.13-finddev.patch,
  +files/eject-2.0.13-header.patch,
  files/eject-2.0.13-kernel25-support.patch,
  +files/eject-2.0.13-use-mountpoints.patch, +eject-2.0.13-r1.ebuild:
  Grab a bunch of patches from Fedora.

  25 Jan 2005; Mike Doty <kingtaco@gentoo.org> eject-2.0.13.ebuild:
  nls patch provided by seemant

  03 Sep 2004; Pieter Van den Abeele <pvdabeel@gentoo.org>
  eject-2.0.13.ebuild:
  Masked eject-2.0.13.ebuild stable for ppc

  29 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org> eject-2.0.13.ebuild:
  depend on sed-4; error check sed; tidy install

  13 May 2004; Stephen P. Becker <geoman@gentoo.org> eject-2.0.13.ebuild:
  Stable on mips.

  14 Mar 2004; Stephen P. Becker <geoman@gentoo.org> eject-2.0.13.ebuild:
  Added ~mips keyword.
