@@ -1,34 +1,32 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-MD5 d94b958bd27d0337d0557fd5d19889a8 eject-2.0.13-r2.ebuild 1544
-MD5 7b671ce7d61247268219763704e3bbc5 eject-2.0.13-r1.ebuild 1095
-MD5 f478cb84812897f1eab491fd5c59d79d eject-2.0.13.ebuild 1208
-MD5 e7637d6414c2c3320600cf8724eadaa7 ChangeLog 5129
+MD5 0434bae7a14860ba6163e21f59136654 ChangeLog 5323
+MD5 35241bc9ea850572d8d7275f822b8162 eject-2.0.13-r1.ebuild 1109
+MD5 fe747f6040f39ac4c0e9f0bdeee5f4e3 eject-2.0.13.ebuild 1224
 MD5 9a09f8d531c582e78977dbfd96edc1f2 metadata.xml 164
-MD5 c7f02cf0dea0ee27a338220804de25ab files/eject-2.0.13-header.patch 848
-MD5 9ce8b7632acf54813ee4336d89293b53 files/eject-2.0.13-prefix-defaultdevice-with-dev.patch 488
-MD5 ba37ff5a9223af8de446a18e62dbe19d files/eject-2.0.13-no-umount.patch 2496
-MD5 31688554edc80b2d6cf1ae427a6533f7 files/eject-2.0.13-fstab-error.patch 956
-MD5 c5613bc078215c657678c57e387731ac files/eject-2.0.13-close-check.patch 1405
-MD5 b92a6e4f192ffefdc4ad665fba3ed4a7 files/eject-2.0.13-i18n-uclibc.patch 645
-MD5 f9dc8e0281dbe9fd3f4db87d5ecfc69e files/eject-2.0.13-kernel25-support.patch 458
-MD5 4c62f46d6d72dd079fd677db6ae57059 files/eject-2.0.13-xmalloc.patch 654
-MD5 c72d5d5d53d6390c871f8ee901770c7b files/eject-2.0.13-finddev.patch 1978
-MD5 9741dfe0732a1a137742fc5302acb007 files/eject-2.0.13-pumount.patch 896
+MD5 36f7e2ed25b110bd5cd812d0bd618bea eject-2.0.13-r2.ebuild 1562
 MD5 a8f6893c482c2b74b0e799b6cd81e867 files/digest-eject-2.0.13 63
-MD5 3f842146dbaced2c09bf45e5cf14b8c8 files/eject-2.0.13-autoclose.patch 699
-MD5 0109237261a5ce6357ddcd041259e61e files/eject-2.0.13-toggle.patch 2838
-MD5 6511dfbfe2029a7e582f958af0d41ca7 files/eject-2.0.13-xregcomp.patch 649
-MD5 79bfd06f7b36f98ebfe676e8e37e4955 files/eject-2.0.13-use-mountpoints.patch 1100
 MD5 a8f6893c482c2b74b0e799b6cd81e867 files/digest-eject-2.0.13-r1 63
+MD5 3f842146dbaced2c09bf45e5cf14b8c8 files/eject-2.0.13-autoclose.patch 699
+MD5 c72d5d5d53d6390c871f8ee901770c7b files/eject-2.0.13-finddev.patch 1978
+MD5 c7f02cf0dea0ee27a338220804de25ab files/eject-2.0.13-header.patch 848
+MD5 f9dc8e0281dbe9fd3f4db87d5ecfc69e files/eject-2.0.13-kernel25-support.patch 458
+MD5 79bfd06f7b36f98ebfe676e8e37e4955 files/eject-2.0.13-use-mountpoints.patch 1100
 MD5 a8f6893c482c2b74b0e799b6cd81e867 files/digest-eject-2.0.13-r2 63
+MD5 c5613bc078215c657678c57e387731ac files/eject-2.0.13-close-check.patch 1405
+MD5 31688554edc80b2d6cf1ae427a6533f7 files/eject-2.0.13-fstab-error.patch 956
+MD5 ba37ff5a9223af8de446a18e62dbe19d files/eject-2.0.13-no-umount.patch 2496
+MD5 9ce8b7632acf54813ee4336d89293b53 files/eject-2.0.13-prefix-defaultdevice-with-dev.patch 488
+MD5 9741dfe0732a1a137742fc5302acb007 files/eject-2.0.13-pumount.patch 896
+MD5 0109237261a5ce6357ddcd041259e61e files/eject-2.0.13-toggle.patch 2838
+MD5 4c62f46d6d72dd079fd677db6ae57059 files/eject-2.0.13-xmalloc.patch 654
+MD5 6511dfbfe2029a7e582f958af0d41ca7 files/eject-2.0.13-xregcomp.patch 649
+MD5 b92a6e4f192ffefdc4ad665fba3ed4a7 files/eject-2.0.13-i18n-uclibc.patch 645
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v1.4.0 (GNU/Linux)
+Version: GnuPG v1.4.1 (GNU/Linux)
 
-iQCVAwUBQuJeTJ4WFLgrx1GWAQIhQQP7BizNLMp/hZR4FIwuJlgnn15custQe1Wg
-VaiCT+9aOsW2CwK4rtEGgMj+1IPCckOEO6UssBSpAdL3SlFMTdxvELdQwurcrErU
-m5jqo6HMOktx0JZ8SZO+4ZUam154Kiptu7hQjg6mMrkrk3Lg9kTnLakAnD/tohjI
-1DNjA/mnrsE=
-=v37p
+iD8DBQFC5UZTj5H05b2HAEkRAnjUAKCfOrofho7RoHOETziPQVSYYfutkQCdF6He
+9n2/LrwX9EkWKnhHWAZMX5w=
+=M6ff
 -----END PGP SIGNATURE-----
