@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/eject/eject-2.0.13.ebuild,v 1.18 2005/05/28 00:44:39 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/eject/eject-2.0.13.ebuild,v 1.19 2005/07/25 20:05:51 flameeyes Exp $
 
 inherit eutils
 
@@ -14,7 +14,8 @@ SLOT="0"
 KEYWORDS="alpha amd64 arm hppa ia64 mips ppc ppc64 sparc x86"
 IUSE="nls"
 
-RDEPEND="virtual/libc"
+RDEPEND="virtual/libc
+	!virtual/eject"
 DEPEND="${RDEPEND}
 	>=sys-apps/sed-4"
 PROVIDE="virtual/eject"
